--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,14 +1,13 @@
 .round-button {
-   flex: 0 0 30px;
+   flex: 0 0 35px;
    border-radius: 50%;
-   width: 30px;
-   height: 30px;
+   width: 35px;
+   height: 35px;
    display: flex;
    justify-content: center;
    align-items: center;
-   transition: all 0.2s ease 0s;
-   will-change: transform;
+   transition: background-color 0.2s ease 0s;
    &:hover {
-      background-color: rgba(255, 255, 255, 0.1);
+      background-color: rgba(255, 255, 255, 0.07);
    }
 }
