--- a/src/app/components/UI/MyButton/MyButton.module.scss
+++ b/src/app/components/UI/MyButton/MyButton.module.scss
@@ -1,34 +1,38 @@
 @use "sass:math";
 
 .myButton {
-   width: 100%;
-   height: 47px;
-   background: transparent;
-   border: 2px solid #1F8FEB;
-   border-radius: 8px;
-   display: flex;
-   column-gap: 6px;
-   justify-content: center;
-   align-items: center;
-   line-height: math.div(21, 18);
-   text-align: center;
-   color: #ffffff;
-   transition: background-color 0.2s ease 0s;
-   &.borderVariant {
-      background-color: #1F8FEB;
-      &:hover {
-         background-color: #1a7dcc;
-      }
-   }
-   svg {
-      font-size: 18px;
-   }
-   &[disabled] {
-      opacity: 0.5;
-      pointer-events: none;
-   }
-   &:hover {
-      background-color: rgba(255, 255, 255, 0.05);
-   }
+  width: 100%;
+  height: 47px;
+  background: transparent;
+  border: 2px solid #1F8FEB;
+  border-radius: 8px;
+  display: flex;
+  column-gap: 6px;
+  font-size: 18px;
+  justify-content: center;
+  align-items: center;
+  line-height: math.div(21, 18);
+  text-align: center;
+  color: #ffffff;
+  transition: background-color 0.2s ease 0s;
+  &.borderVariant {
+    background-color: #1F8FEB;
+    &:hover {
+      background-color: #1a7dcc;
+    }
+  }
+  img {
+    width: 18px;
+    flex: 0 0 18px;
+    height: 18px;
+    max-width: 100%;
+  }
+  &[disabled] {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.05);
+  }
 }
 
