--- a/src/app/styles/App.scss
+++ b/src/app/styles/App.scss
@@ -1,20 +1,18 @@
 @use "reset";
 @use "global";
 @use "fonts";
+@use "variables";
 
 .App {
-   position: relative;
-   width: 360px;
-   height: 600px;
-   overflow-x: hidden;
-   overflow-y: auto;
-   background-color: #0C0C3A;
-   padding-top: 72px;
-
+  position: relative;
+  background-color: #0C0C3A;
+  padding-top: 72px;
+  min-height: variables.$appHeight;
 }
 
 .container {
-   margin: 0 16px;
-   max-width: 100%;
-   height: 100%;
+  margin: 0 16px;
+  height: 100%;
+  max-width: 100%;
+  min-height: 528px;
 }
