--- a/src/app/styles/_global.scss
+++ b/src/app/styles/_global.scss
@@ -1,13 +1,59 @@
+@use "sass:math";
+
 .round-button {
-   flex: 0 0 35px;
-   border-radius: 50%;
-   width: 35px;
-   height: 35px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   transition: background-color 0.2s ease 0s;
-   &:hover {
-      background-color: rgba(255, 255, 255, 0.07);
-   }
+  flex: 0 0 35px;
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.2s ease 0s;
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.07);
+  }
+}
+
+// =========================================================
+._input-filled {
+
+  border-color: #16D1D6;
+}
+
+// =========================================================
+// Table
+.table {
+  padding-bottom: 50px;
+  &__row {
+    display: flex;
+    align-items: center;
+    row-gap: 2px;
+    column-gap: 20px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+
+    &:not(:last-child) {
+      margin-bottom: 16px;
+    }
+  }
+  &__label {
+    flex: 1 1 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 18px;
+    line-height: math.div(21, 18);
+    color: #1F8FEB;
+  }
+  &__value {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: math.div(21, 18);
+    color: rgba(255, 255, 255, 0.9);
+    word-break: break-all;
+    .table__row_button & {
+      flex: 1 1 100%;
+    }
+  }
 }
