send form added

--- a/src/app/components/UI/MyInput/MyInput.module.scss
+++ b/src/app/components/UI/MyInput/MyInput.module.scss
@@ -1,5 +1,42 @@
 @use "sass:math";
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+// =========================================================
+
+.label {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: math.div(21, 18);
+  color: #1F8FEB;
+  height: 35px;
+
+}
 
 .myInput {
   transition: border-color 0.1s ease 0s;
+  input {
+    height: 41px;
+    padding: 10px 12px;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    border-radius: 8px;
+    font-weight: 300;
+    background-color: transparent;
+    width: 100%;
+    color: #ffffff;
+    &:focus {
+      border-color: rgba(255, 255, 255, 0.4);
+    }
+    &::placeholder {
+      color: rgba(255, 255, 255, 0.3);
+    }
+  }
 }
