--- a/src/app/styles/_global.scss
+++ b/src/app/styles/_global.scss
@@ -16,8 +16,7 @@
 
 // =========================================================
 ._input-filled {
-
-  border-color: #16D1D6;
+  border-color: #16D1D6 !important;
 }
 
 // =========================================================
