--- a/src/app/components/UI/RoutersNav/RoutersNav.module.scss
+++ b/src/app/components/UI/RoutersNav/RoutersNav.module.scss
@@ -20,6 +20,9 @@
   justify-content: center;
   align-items: center;
   transition: background-color 0.1s ease 0s;
+  &:focus {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
   img {
     transform: translate(-1px, 0);
   }
@@ -33,5 +36,7 @@
   justify-content: center;
   flex: 1 1 auto;
   padding: 0 30px;
-  line-height: 1.3;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: math.div(26, 22);
 }
