--- a/src/app/components/AppPlug/AppPlug.module.scss
+++ b/src/app/components/AppPlug/AppPlug.module.scss
@@ -3,7 +3,6 @@
 
 .plug {
   height: 100%;
-  padding-bottom: 17px;
 }
 
 .plugBody {
@@ -16,6 +15,7 @@
 .plugLogo {
   max-width: 175px;
   width: 100%;
+  height: 60px;
   margin: 0 auto;
   img {
     width: 100%;
@@ -57,18 +57,10 @@
   text-align: center;
   color: #1F8FEB;
   padding: 15px;
-}
-
-.plugConnectButton {
-  background-color: #1F8FEB;
-  border-radius: 8px;
-  line-height: 47px;
-  padding: 0 24px;
-  min-width: 152px;
-  transition: background-color 0.2s ease 0s;
-  @media (any-hover: hover) {
-    &:hover {
-      background-color: #1a7cce;
-    }
+  margin-bottom: 17px;
+  &.hidden {
+    visibility: hidden;
+    opacity: 0;
   }
 }
+
