--- a/src/app/components/TokensTabs/TokensTabs.module.scss
+++ b/src/app/components/TokensTabs/TokensTabs.module.scss
@@ -1,12 +1,12 @@
 @use "sass:math";
 
 .tabs {
-   position: relative;
-   background: #0F2055;
-   border-radius: 24px 24px 0 0;
-   margin: 0 -16px;
-   min-height: 57.8%;
-   padding: 16px 16px 30px 16px;
+  position: relative;
+  background: #0F2055;
+  border-radius: 24px 24px 0 0;
+  margin: 0 -16px;
+  min-height: 47vh;
+  padding: 16px 16px 30px 16px;
 }
 
 // =========================================================
