--- a/src/app/styles/_global.scss
+++ b/src/app/styles/_global.scss
@@ -9,6 +9,11 @@
   justify-content: center;
   align-items: center;
   transition: background-color 0.2s ease 0s;
+  img {
+    width: 18px;
+    height: 18px;
+    max-width: 100%;
+  }
   &:hover {
     background-color: rgba(255, 255, 255, 0.07);
   }
