--- a/src/app/components/TokensTabs/TokensTabs.module.scss
+++ b/src/app/components/TokensTabs/TokensTabs.module.scss
@@ -5,7 +5,7 @@
   background: #0F2055;
   border-radius: 24px 24px 0 0;
   margin: 0 -16px;
-  min-height: 47vh;
+  min-height: 373px;
   padding: 16px 16px 30px 16px;
 }
 
