--- a/src/app/components/WalletSend/WalletSend.module.scss
+++ b/src/app/components/WalletSend/WalletSend.module.scss
@@ -1,5 +1,9 @@
 @use "sass:math";
 
+.link {
+  color: #1F8FEB;
+}
+
 .label {
   display: flex;
   justify-content: space-between;
@@ -22,6 +26,7 @@
   min-height: 410px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
   transform: translate(0, -30px);
 }
@@ -37,7 +42,16 @@
 
 .transactionText {
   text-align: center;
+  word-break: break-all;
   font-size: 18px;
-  line-height: math.div(21, 18);
-  color: #1F8FEB;
+  margin: 0 15px;
+  line-height: 1.4;
+  span {
+    margin-top: 5px;
+    display: block;
+    font-size: 16px;
+  }
+  &:not(:last-child) {
+    margin-bottom: 15px;
+  }
 }
