--- a/src/app/components/Wallet/Wallet.module.scss
+++ b/src/app/components/Wallet/Wallet.module.scss
@@ -26,7 +26,7 @@
   position: absolute;
   z-index: 2;
   top: 105%;
-  right: 0;
+  right: -5px;
   background: #11316B;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 8px;
@@ -36,10 +36,16 @@
 
 .settingsBtn {
   text-align: left;
-  display: block;
-  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  column-gap: 6px;
+  height: 41px;
+  padding: 0 20px;
   position: relative;
   width: 100%;
+  img {
+    flex: 0 0 18px;
+  }
   &[disabled] {
     opacity: 0.5;
     pointer-events: none;
