add confirmation modal

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -4,3 +4,15 @@ $mainColor: #ffffff;
 $blueColor: #1f8feb;
 $appWidth: 360px;
 $appHeight: 600px;
+
+:root{
+  // Sizes
+  --app-width: 360px;
+  --app-height: 600px;
+
+  // Z-index's
+  --modal-z-index: 150;
+
+  // Colors
+  --overlay-color: rgba(0, 0, 0, 0.45);
+}
