--- a/src/app/components/ConfirmationModal/ConfirmationModal.module.scss
+++ b/src/app/components/ConfirmationModal/ConfirmationModal.module.scss
@@ -27,9 +27,12 @@
   padding: 16px;
   font-size: 16px;
   column-gap: 20px;
+  max-height: 150px;
+  overflow-x: visible;
+  overflow-y: auto;
 }
 
-.tableRow{
+.tableRow {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -42,12 +45,16 @@
 
 .label {
   color: #1F8FEB;
+  margin-bottom: 5px;
 }
 
 .value {
   font-weight: 300;
-  span{
+  line-height: 1.2;
+  span {
+    //text-align: right;
     display: block;
+    word-break: break-all;
     &:not(:last-child) {
       margin-bottom: 8px;
     }
