--- a/src/app/components/Wallet/Wallet.module.scss
+++ b/src/app/components/Wallet/Wallet.module.scss
@@ -72,7 +72,7 @@
   }
 }
 
-// =========================================================
+// ---------------------------------------------------------------------------------------------------------------------
 .infoWallet {
   display: grid;
   row-gap: 11px;
@@ -88,7 +88,7 @@
   font-weight: 600;
   font-size: 32px;
   line-height: math.div(38, 32);
-  .percentСhange {
+  .percentChange {
     color: #ffcbcb;
     font-size: 18px;
     font-weight: 400;
