add new connect design

--- a/src/app/components/ConnectPage/ConnectPage.module.scss
+++ b/src/app/components/ConnectPage/ConnectPage.module.scss
@@ -20,9 +20,13 @@
     }
 
     .connectCodeContent {
-        margin-top: 130px;
+        margin-top: 20px;
         display: flex;
         flex-direction: column;
         gap: 10px;
+
+        > button {
+            margin-top: 10px;
+        }
     }
 }
