--- a/src/app/components/ConnectPage/ConnectPage.module.scss
+++ b/src/app/components/ConnectPage/ConnectPage.module.scss
@@ -28,5 +28,16 @@
         > button {
             margin-top: 10px;
         }
+
+        .input {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            > p {
+                font-size: 16px;
+                color: #ff6767;
+            }
+        }
     }
 }
