--- a/src/app/components/MessageSignPage/MessageSignPage.module.scss
+++ b/src/app/components/MessageSignPage/MessageSignPage.module.scss
@@ -1,5 +1,5 @@
 .signContainer {
-    margin-top: 100px;
+    padding-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
