--- a/src/app/styles/App.scss
+++ b/src/app/styles/App.scss
@@ -7,7 +7,8 @@
   position: relative;
   background-color: #0C0C3A;
   padding-top: 72px;
-  min-height: variables.$appHeight;
+  height: variables.$appHeight;
+  resize: none;
 }
 
 .container {
