--- a/src/app/components/WalletSend/ui/AssetsSelect/AssetsSelect.module.scss
+++ b/src/app/components/WalletSend/ui/AssetsSelect/AssetsSelect.module.scss
@@ -52,13 +52,15 @@
   z-index: 20;
   width: 100%;
   left: 0;
-  overflow: hidden;
+  overflow: auto;
   border-radius: 0 0 8px 8px;
   border: 2px solid rgba(255, 255, 255, 0.5);
   border-top: none;
   background-color: #11316B;
   visibility: hidden;
   opacity: 0;
+  max-height: 300px;
+
   &.active{
     opacity: 1;
     visibility: visible;
