--- a/src/app/components/OuterConfirmation/OuterConfirmation.module.scss
+++ b/src/app/components/OuterConfirmation/OuterConfirmation.module.scss
@@ -30,7 +30,7 @@
             gap: 10px;
     
             > p:first-child {
-                width: 120px;
+                min-width: 120px;
                 font-weight: 700;
             }
         }
