--- a/src/app/components/TransactionDetails/TransactionDetails.module.scss
+++ b/src/app/components/TransactionDetails/TransactionDetails.module.scss
@@ -1,1 +1,15 @@
 @use "sass:math";
+
+
+.transaction__transfers {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 10px;
+
+  .transaction__transfer {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+}
