--- a/src/app/components/OuterConfirmation/OuterConfirmation.module.scss
+++ b/src/app/components/OuterConfirmation/OuterConfirmation.module.scss
@@ -1,53 +1,137 @@
 @import "src/app/styles/variables";
 
-.confirmationContainer {
+.confirmation {
     height: calc($appHeight - 72px);
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    padding: 20px;
-    padding-top: 80px;
     position: relative;
- 
-    .title {
-        font-size: 24px;
+    overflow-y: auto;
+    padding-bottom: 180px;
+
+    &__title {
+        text-align: center;
+        font-size: 22px;
+        font-weight: 500;
     }
 
-    .table {
-        margin-top: 100px;
-        width: 100%;
+    &__subtitle {
+        text-align: center;
+        color: #B6B6C4;
+        font-size: 16px;
+        font-weight: 400;
+    }
+
+    &__content {
+        margin-top: 12px;
         display: flex;
         flex-direction: column;
-        gap: 10px;
-        max-height: 150px;
-        overflow: auto;
+        gap: 8px;
+    }
+
+    &__block {
+        display: block;
+        width: 100%;
+        background-color: #0F2055;
+        padding: 12px 16px;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
 
         .row {
-            width: 100%;
             display: flex;
             align-items: center;
-            gap: 10px;
-    
-            > p:first-child {
-                min-width: 120px;
-                font-weight: 700;
+            justify-content: space-between;
+            gap: 8px;
+        }
+
+        .col {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        h5 {
+            font-size: 16px;
+            font-weight: 400;
+            color: #B6B6C4;
+        }
+
+        p {
+            font-size: 16px;
+            font-weight: 400;
+        }
+
+        .showMoreBtn {
+            font-size: 16px;
+            font-weight: 400;
+            color: #1F8FEB;
+            margin-left: 4px;
+        }
+    }
+
+    &__bottom {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        z-index: 3;
+        background-color: #0F2055;
+        border-top: 1px solid #273666;
+        width: 100%;
+        padding-inline: 16px;
+        padding-top: 12px;
+        padding-bottom: 24px;
+
+        &_fee {
+            display: flex;
+            justify-content: space-between;
+
+            h5 {
+                display: flex;
+                align-items: center;
+                gap: 8px;
+                font-size: 16px;
+                font-weight: 400;
+                color: #B6B6C4;
+            }
+
+            p {
+                font-size: 16px;
+                font-weight: 400;
+            }
+        }
+
+        &_total {
+            display: flex;
+            justify-content: space-between;
+
+            h5,
+            p {
+                font-size: 18px;
+                font-weight: 600;
+            }
+        }
+
+        .divider {
+            width: 100%;
+            height: 1px;
+            background-color: #273666;
+            margin: 12px 0;
+            margin-top: 8px;
+        }
+
+        &_buttons {
+            margin-top: 12px;
+            width: 100%;
+            display: flex;
+            gap: 8px;
+
+            .btn {
+                flex: 1;
             }
         }
     }
 
-    .buttons {
-        width: 100%;
-        position: absolute;
-        bottom: 20px;
-        left: 50%;
-        transform: translateX(-50%);
-        display: flex;
-        gap: 10px;
-
-        > button {
-            flex: 1;
-        }
-    }
-    
 }
