--- a/src/app/components/OuterConfirmation/OuterConfirmation.module.scss
+++ b/src/app/components/OuterConfirmation/OuterConfirmation.module.scss
@@ -24,6 +24,7 @@
     }
 
     &__content {
+        width: 100%;
         margin-top: 12px;
         display: flex;
         flex-direction: column;
@@ -38,9 +39,10 @@
         border-radius: 8px;
         display: flex;
         flex-direction: column;
-        gap: 12px;
+        gap: 14px;
 
         .row {
+            width: 100%;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -48,6 +50,7 @@
         }
 
         .col {
+            width: 100%;
             display: flex;
             flex-direction: column;
             gap: 8px;
